<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.moksha.plant_watering.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/systemLastPingTextView"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/last_ping"
        app:layout_constraintRight_toLeftOf="@id/systemLastPingValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/systemLastPingValue"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginEnd="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/last_ping_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/systemLastPingTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastWateredTextView"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:text="@string/last_watered"
        app:layout_constraintEnd_toEndOf="@id/systemLastPingTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/systemLastPingTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lastWateredValue"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/last_watered_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lastWateredTextView"
        app:layout_constraintTop_toBottomOf="@+id/systemLastPingValue" />

    <TextView
        android:id="@+id/durationTextView"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/duration"
        app:layout_constraintEnd_toEndOf="@id/lastWateredTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastWateredTextView" />


    <EditText
        android:id="@+id/durationEditView"
        android:layout_width="49dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal"
        android:text="@string/defaultTime"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toEndOf="@+id/durationTextView"
        app:layout_constraintTop_toBottomOf="@+id/lastWateredValue"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="94dp"
        android:layout_height="54dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:shadowColor="@color/colorPrimary"
        android:text="@string/start"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/durationEditView" />

    <TextView
        android:id="@+id/pendingActions"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pending_actions"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton" />

    <View
        android:id="@+id/horizontalLine1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/startButton"
        android:layout_marginTop="2dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pendingActions" />

    <TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/history"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pendingItemsListView" />

    <View
        android:id="@+id/horizontalLine2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/history"
        android:layout_marginTop="2dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history" />

    <ListView
        android:id="@+id/historyListView"
        android:layout_width="370dp"
        android:layout_height="300dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLine2" />

    <ListView
        android:id="@+id/pendingItemsListView"
        android:layout_width="370dp"
        android:layout_height="98dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLine1" />

</android.support.constraint.ConstraintLayout>
